--- a/angular/exam/src/app/app.component.html
+++ b/angular/exam/src/app/app.component.html
@@ -1,2 +1,9 @@
+<hr />
+
 <app-first></app-first>
+<hr />
+<app-child
+    (msgToParent)="traitementDuApp($event)"
+    [colorPref]="'pink'"
+></app-child>
 
