--- a/angular/exam/src/app/app.component.html
+++ b/angular/exam/src/app/app.component.html
@@ -1,9 +1,15 @@
-<hr />
+<h1>EXAM</h1>
+
+<!--<hr />
 
 <app-first></app-first>
 <hr />
 <app-child
     (msgToParent)="traitementDuApp($event)"
     [colorPref]="'pink'"
-></app-child>
+></app-child>-->
+
+<div class="container">
+    <app-cv></app-cv>
+</div>
 
